[package]
name = "reachable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
addr = "0.15.6"
warp = { version = "0.3.3", features = ["tls"] }
rcgen = "0.10.0"
ureq = "2.6.2"