[package]
name = "reachable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
addr = "0.15.6"
warp = { version = "0.3", features = ["tls"] }
rcgen = "0.10.0"
reqwest = "0.11"
sha2 = "0.10.6"
random-string = "1.0.0"
bytes = "1.4.0"
hex = "0.4.3"